veonDomination/scss/veonDomination.scss
/////////////////// Fonts
@font-face {
    font-family: 'TP Hero Light';
    src: url('../fonts/TPHero-Light.woff') format('woff'),
    url('../fonts/TPHero-Light.otf') format('opentype');
    font-weight: light;
}

@font-face {
    font-family: 'TP Hero Thin';
    src: url('../fonts/TPHero-Thin.woff') format('woff'),
    url('../fonts/TPHero-Thin.otf') format('opentype');
    font-weight: thin;
}

@font-face {
    font-family: 'TP Hero Hairline';
    src: url('../fonts/TPHero-Hairline.woff') format('woff'),
    url('../fonts/TPHero-Hairline.otf') format('opentype');
    font-weight: hairline;
}

/////////////////// Vars
$weight-light: 'TP Hero Light'; //medium
$weight-thin: 'TP Hero Thin'; //light
$weight-hairline: 'TP Hero Hairline'; //thin
$weight-extralight: 'TP Hero ExtraLight'; //thin
/////////////////// Mixins
@mixin opacity($opacity) {
    opacity: $opacity;
    $opacity-ie: $opacity * 100;
    filter: alpha(opacity=$opacity-ie); //IE8
}

$breakpoints: ( 'super-tiny': ( max-width: 480px),
'tiny': ( max-width: 768px),
'small': ( max-width: 998px),
'medium': ( max-width: 1024px),
'large': ( max-width: 1199px),
'x-large': (min-width: 1200px));
// Creating the mixin
@mixin breakpoint($name) {
    @if map-has-key($breakpoints,
    $name) {
        @media #{inspect(map-get($breakpoints, $name))} {
            @content;
        }
    }
    @else {
        @warn "Couldn't find a your breakpoint named `#{$name}`.";
    }
}

/////////////////// Styles
html,
body,
p,
span,
h1,
h2,
h3,
h4,
h5,
h6 {
    margin: 0;
    font-size: 2vh;
    font-weight: lighter;
}

.clear-fix:after,
.clear {
    content: ".";
    display: block;
    clear: both;
    visibility: hidden;
    line-height: 0;
    height: 0;
}

.clear-fix {
    zoom: 1;
}

.dummy_block {
    width: 64%;
    margin: 0 auto;
    height: 100px;
    background-color: white;
}

.veon {
    &__domination_block {
        position: fixed;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        overflow: hidden;
        img {
            display: block;
            margin: 0 auto;
        }
        &__overlay {
            position: fixed;
            top: 0;
            bottom: 0;
            left: 0;
            right: 0;
            background-color: white;
            @include opacity(0.8);
            z-index: 9000;
        }
        &__background {
            z-index: 9900;
            position: relative;
            width: auto;
            height: 100vh;
            overflow: hidden;
            .background_image {
                position: absolute;
                top: -9999px;
                bottom: -9999px;
                left: -9999px;
                right: -9999px;
                margin: auto;
                height: auto;
                width: auto;
                max-height: 100vh;
                max-width: none;
                @include breakpoint('super-tiny') {
                    height: 120vh;
                    max-width: none;
                    max-height: none;
                }
                /* @include breakpoint('x-large') {
                    width: 1180px;
                }
                @include breakpoint('large') {
                    width: 1024px;
                }
                @include breakpoint('medium') {
                    width: 900px;
                }
                @include breakpoint('small') {
                    width: 780px;
                }
               
                @include breakpoint('super-tiny') {
                    position: relative;
                    width: 1024px;
                    left: calc((100% - 1024px) / 2);
                } */
            }
        }
        &__content {
            position: absolute;
            top: 0;
            z-index: 9990;
            height: 100vh;
            width: 100vw;
            &__logo {
                width: 100%;
                position: absolute;
                top: 2%;
                .logo_image {
                    height: 20vh;
                    width: auto;
                }
            }
            &__claim {
                position: absolute;
                width: 100%;
                top: 28vh;
                
                &__text {
                    text-align: center;
                    margin: 0 auto;
                    max-width: 90%;
                    font-family: $weight-hairline;
                    text-transform: uppercase;
                    font-size: 5.6rem;
                    line-height: 5.8rem;
                    letter-spacing: -0.3rem;
                    @include breakpoint('small') {
                        font-size: 4.6rem;
                        line-height: 4.8rem;
                    }
                    @include breakpoint('super-tiny') {
                        font-size: 4.2rem;
                        line-height: 4.5rem;
                    }
                    /* @include breakpoint('x-large') {
                        font-size: 8.2rem;
                        line-height: 8.1rem;
                        margin-top: 4rem;
                        letter-spacing: -0.4rem;
                    }
                    @include breakpoint('large') {
                        font-size: 7.6rem;
                        line-height: 7.8rem;
                        margin-top: 3rem;
                        letter-spacing: -0.3rem;
                    }
                    @include breakpoint('medium') {
                        font-size: 5rem;
                        line-height: 5.8rem;
                    }
                    @include breakpoint('small') {
                        margin-top: 1rem;
                        line-height: 5.2rem;
                    }
                    @include breakpoint('tiny') {
                        font-size: 5rem;
                        line-height: 7rem;
                        margin-top: 6rem;
                    }
                    @include breakpoint('super-tiny') {
                        font-size: 3.2rem;
                        line-height: 4.1rem;
                        margin-top: 6.7rem;
                    } */
                }
            }
            &__phone_text {
                position: absolute;
                width: 100%;
                top: 58vh;
                @include breakpoint('super-tiny') {
                    top: 60vh;
                }
                &__claim {
                    font-family: $weight-thin;
                    text-align: center;
                    font-size: 1rem;
                    line-height: 1.2rem;
                   
                    /* @include breakpoint('large') {
                        margin-top: 6.5rem;
                    }
                    @include breakpoint('medium') {
                        margin-top: 6rem;
                        font-size: 1rem;
                        line-height: 1.2rem;
                    }
                    @include breakpoint('small') {
                        margin-top: 4.5rem;
                        font-size: 0.9rem;
                        line-height: 1.1rem;
                    }
                    @include breakpoint('tiny') {
                        margin-top: 12rem;
                        font-size: 1.4rem;
                        line-height: 1.8rem;
                    }
                    @include breakpoint('super-tiny') {
                        margin-top: 10rem;
                        font-size: 1.2rem;
                        line-height: 1.5rem;
                    } */
                }
            }
            &__app_buttons {
                position: absolute;
                width: 100%;
                margin: 0 auto;
                bottom: 0;
                text-align: center;
                &__container {
                    width: 100%;
                    margin: 0 auto;
                    .app_btn {
                        width: 130px;
                        height: auto;
                        margin-bottom: 5vh;
                        
                    }
                }
                .spacer {
                    width: 35vw;
                    max-width: 250px;
                    display: inline-block;
                    @include breakpoint('super-tiny') {
                        width: 5vw;
                    }
                    /* @include breakpoint('x-large') {
                        width: 300px;
                    }
                    @include breakpoint('medium') {
                        width: 320px;
                    }
                    @include breakpoint('small') {
                        width: 210px;
                    }
                    
                    @include breakpoint('super-tiny') {
                        width: 16px;
                    } */
                }
                .app {
                    &__apple_store {
                        width: auto;
                        display: inline-block;
                        @include breakpoint('super-tiny') {
                        }
                        .btn--apple_store {}
                    }
                    &__play_store {
                        width: auto;
                        display: inline-block;
                        @include breakpoint('super-tiny') {
                        }
                        .btn--play_store {}
                    }
                }
            }
        }
        &__close_button {
            position: absolute;
            right: 4%;
            top: 2%;
            z-index: 9999;
            @include breakpoint(small) {
                right: 4%;
            }
            .close_btn {
                &__text,
                &__icon {
                    font-family: "TP Hero Thin";
                    font-size: 1.8rem;
                    line-height: 2rem;
                    text-transform: uppercase;
                }
                &__text {
                    @include breakpoint(small) {
                        display: none;
                    }
                }
                &__icon {
                    @include breakpoint(small) {
                        font-size: 2.2rem;
                        line-height: 1.5rem;
                    }
                }
            }
        }
    }
}

